corrected overflow in module-4

--- a/module-4/style.css
+++ b/module-4/style.css
@@ -34,16 +34,13 @@ nav .navOpt ul li a{
 }
 
 .top{
-   
-  
-
 background: linear-gradient(180.43deg, rgba(0,0,0,0.60) 0%, rgba(0,0,0,0.80) 100%), url(../img/Rocketman_Hero.png);
-
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%;
-    height: 550px;
-    position: relative;
-    width: 100%;
+    height: 500px;
+   
+    /* width: 100%; */
     padding-top: 47.5px;
     padding-left: 47.5px;
     
@@ -52,7 +49,7 @@ background: linear-gradient(180.43deg, rgba(0,0,0,0.60) 0%, rgba(0,0,0,0.80) 100
 .para1{
     color: white;
     font-size: 30px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:  Georgia, Times, 'Times New Roman', serif;
     font-weight: 400;
     font-size: 64px;
     font-weight: 100;
